--- a/app/src/main/res/layout/student_list_item.xml
+++ b/app/src/main/res/layout/student_list_item.xml
@@ -5,6 +5,7 @@
 
     <data>
         <variable name="student" type="com.joseph18.ifubaya.advweek4.model.Student" />
+        <variable name="listener" type="com.joseph18.ifubaya.advweek4.view.ButtonDetailClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -69,6 +70,8 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:text="Detail"
+                    android:tag="@{student.id}"
+                    android:onClick="@{listener::onButtonDetailClick}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtName" />
